# Female-supervillain-trading-card-app-REST-API-version

./: main.py  pyproject.toml  villain.db
.upm/: store.json
static/: villain.js
