[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "hard-redesigning-for-restful-routes-starter"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
flask-sqlalchemy = "^2.4"
python = "^3.8"
[tool.poetry.dev-dependencies]
